fix sizing on mobile screens

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ main {
   .product_info {
     width: auto;
     margin: 0 1rem 1rem;
+    padding: 1rem;
   }
 
   .preview_img picture img {
